Vertical tags get aligned correctly.

--- a/views/styles/site/container/style.styl
+++ b/views/styles/site/container/style.styl
@@ -56,7 +56,7 @@
     white-space nowrap
     display block
     position relative
-    visibility hidden
+    visiblity hidden
 
     .vertical
         position absolute
